2009-11-26

	* libsylph/prefs_common.[ch]
	  src/prefs_common_dialog.c
	  src/folderview.c: the visibility of message number columns in the
	  folder view is now configurable for each column.

2009-11-26

	* libsylph/imap.c: made error log more verbose.
	* libsylph/socket.c: sock_connect_with_timeout(): check socket with
	  getsockopt() even if select() succeed.

2009-11-25

	* src/sslmanager.c: display issued and expire date. Refined text
	  format.

2009-11-24

	* src/addressbook.c: re-enabled sort order change because the bug
	  seems to be fixed.

2009-11-24

	* src/addressbook.c: addressbook_create(): create renderer for
	  each column.

2009-11-19

	* libsylph/ssl.c
	  src/sslmanager.c: calculate and display SHA1/MD5 fingerprint
	  if verification of SSL certificate failed.

2009-11-16

	* version 3.0.0beta2

2009-11-16

	* src/icons/sylpheed.ico: added 48x48(32bpp), 32x32(32bpp),
	  16x16(32bpp) icons.

2009-11-13

	* libsylph/imap.c: removed redundant debug print.
	* libsylph/libsylph-0.def: updated.

2009-11-13

	* src/addressbook.c: added sort order change (but disabled because of
	  random crash bug inside GTK+).
	  Hide Lookup button if LDAP is not used.

2009-11-11

	* src/plugin.[ch]
	  src/main.c: added plugin APIs: syl_plugin_main_window_lock(),
	  syl_plugin_main_window_unlock() and syl_plugin_inc_is_active().

2009-11-09

	* src/addressbook.c: addressbook_read_file(): show more descriptive
	  error.

2009-11-09

	* libsylph/mh.c
	  src/inc.c: removed redundant debug print.

2009-11-09

	* libsylph/imap.c: imap_get_msginfo(): SELECT before FETCH
	  (fixed opening message by syl_plugin_open_message().

2009-11-09

	* src/plugin.h: increased SYL_PLUGIN_INTERFACE_VERSION.

2009-11-06

	* libsylph/mh.c
	  libsylph/folder.c
	  libsylph/sylmain.c
	  libsylph/account.[ch]
	  src/account_dialog.c: added "account-updated" signal to SylApp.
	  Don't emit signals if SylApp is not initialized.
	  Call account_updated() only once.

2009-11-06

	* src/plugin.c