@@ -1,5 +1,10 @@
 2009-11-26
 
+	* libsylph/ssl.c: ssl_init_socket_with_method(): modified debug
+	  output.
+
+2009-11-26
+
 	* libsylph/prefs_common.[ch]
 	  src/prefs_common_dialog.c
 	  src/folderview.c: the visibility of message number columns in the
